package com.example.uml;

public class Person {//代码形式->类图

    private Integer id;

    private String name;

    public void setName(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

}
