package com.example.uml.dependence;

public class IDCard {
}
