package com.example.uml.dependence;

public class PersonDao {
}
