package com.example.uml.dependence;

public class PersonServiceBean {

    private PersonDao personDao;//类

    public void save(Person person) {

    }

    public IDCard getIDCard(Integer personId) {
        return null;
    }

    public void modify() {
        Department department = new Department();
    }

}