@startuml
'https://plantuml.com/class-diagram

class IDCard
class Person
class PersonDao
class Department

class PersonServiceBean {
    personDao: PersonDao
    save(person: Person):void
    getIDCard(personId: Integer):IDCard
    modify():void
}

PersonServiceBean ..> IDCard
PersonServiceBean ..> Person
PersonServiceBean ..> PersonDao
PersonServiceBean ..> Department

@enduml